@@ -16,14 +16,12 @@ dependencies {
     //modImplementation("net.neoforged:neoforge:${rootProject.neoforge_version}")
 
     modImplementation("dev.architectury:architectury:${property("architectury_version")}")
-    modImplementation(file("libs/CobbleUtils-1.6.1-1.21.1-fabric-1.1.3-0cccf11.jar"))
-}
 
-test {
-    useJUnitPlatform()
-    // Since JDK 21
-    // ref: https://stackoverflow.com/questions/77951485/getting-a-java-agent-has-been-loaded-warning-in-intellij-after-upgrading-jdk-17
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
+    // Lombok
+    annotationProcessor("org.projectlombok:lombok:${property("lombok_version")}")
+    implementation("org.projectlombok:lombok:${property("lombok_version")}")
+
+    modImplementation(files("libs/CobbleUtils-common.jar"))
 }
 
 
